--- a/style.css
+++ b/style.css
@@ -5,4 +5,7 @@ header {
 nav a {
   text-transform: uppercase;
   color: #000000;
+  font-weight: bold;
+  font-size: 22px;
+  text-decoration: none;
 } 
