--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ nav a {
   text-decoration: none;
 } 
 
+nav {
+  position:absolute;
+  top:0;
+  right: 0;
+}
 nav li {
   display: inline;
   margin:0 0 0 15px;
