--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ nav a {
 
 nav {
   position:absolute;
-  top:0;
+  top:110px;
   right: 0;
 }
 nav li {
@@ -24,4 +24,9 @@ nav li {
   width: 940px;
   position:relative;
   margin: o auto;
+}
+.produtos {
+  width: 940px;
+  margin: o auto;
+  padding:50px 0;
 }
